samples/_failures_safe/1761215514_2e9a11_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d0761e1.c: In function ‘tokenize’:
./samples/SAFE/__tmp_5d0761e1.c:162:9: error: expected declaration or statement at end of input
  162 |         tokens[*token_count].column = column;
      |         ^~~~~~
./samples/SAFE/__tmp_5d0761e1.c:162:9: error: expected declaration or statement at end of input
